# ERP-Test

./: .clang-format  .clang-tidy  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODEX_NOTES.md  README.md  Runbook.txt  skill.md  vcpkg.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  quality-gate.yml
api/: CMakeLists.txt
api/src/: main.cpp
core/: CMakeLists.txt
core/include/core/: error.hpp  inventory.hpp  inventory_repository.hpp  inventory_service.hpp  person.hpp  person_repository.hpp  person_service.hpp  person_validator.hpp  product.hpp  product_repository.hpp  product_service.hpp  product_validator.hpp  result.hpp
core/src/: inventory_service.cpp  person_service.cpp  person_validator.cpp  product_service.cpp  product_validator.cpp
docs/: audit-logging.md  ci-alternatives.md  company-tooling.md  observability.md  operations-runbook.md  quality-gates.md  sbom.md
docs/api/: README.md
infra/: CMakeLists.txt
infra/include/infra/mapping/: person_mapper.hpp  product_mapper.hpp
infra/include/infra/sqlite/: migrations.hpp  sqlite_inventory_repository.hpp  sqlite_person_repository.hpp  sqlite_product_repository.hpp
infra/src/mapping/: person_mapper.cpp  product_mapper.cpp
infra/src/sqlite/: migrations.cpp  sqlite_inventory_repository.cpp  sqlite_person_repository.cpp  sqlite_product_repository.cpp
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
openapi/: openapi.yaml
ops/: contract_test.sh  gen_client.sh  gen_sbom.sh  install_tools.md  quality_gate.sh  scan_all.sh
proto/: CMakeLists.txt  person.proto
scripts/: bootstrap.ps1  build.ps1  lint.ps1  run-api.ps1  smoke-test.ps1  test.ps1
security/: audit-event.schema.json  rbac-matrix.yaml
skills/hybrid-person-mvp/: SKILL.md
skills/hybrid-person-mvp/references/: agenda.md
tests/: CMakeLists.txt  test_core_product_inventory.cpp  test_core_validation.cpp  test_helpers.hpp  test_mapping_roundtrip.cpp  test_sqlite_product_inventory.cpp  test_sqlite_repo.cpp
